added TestModules project
